--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,19 @@
-    fruits list:
-    apple
-    Hello world
-    orange
-    pomelo
-    
-    Lorem ipsum generator: https://www.lipsum.com/
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8">
+        <title>
+            Alexander Chui's Dank Lab 1 
+        </title>
+        
+    </head>
+    <body>
+        <h1>Alexander Chui's Dank Lab 1 </h1>
+        <img src="cute_kitten.jpg" alt="Very Adorable Kitten">
+        <ul> 
+            <li>Tacos</li>
+            <li>Planes</li>
+            <li>Sleep</li>
+          </ul>    
+    </body>
+</html>
