--- a/public/lab_2/index.html
+++ b/public/lab_2/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Alexander Chui">
+        <meta name="description" content="Lab 2 for INST377">
         <title>
             Alexander Chui's Lab 2
         </title>
@@ -43,17 +44,15 @@
         Please let me know if this is ok, and if so which start date you would prefer.<br>
         You can find more information about <a href="http://umd.edu">important university dates</a> on our website.<br>
     </p>
-    <p>
-        <h2>Subjects of study</h2>
+    <p><h2>Subjects of study</h2>
         At the iSchool, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of information studies. You seem like a committed researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:<br>
         <ol> 
             <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
-            <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
+            <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 33°C (91.4°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
             <li><abbr title="Hypertext Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
         </ol>
         So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.<br>
-    </p>
-        <h2>Animals of the Extended Perambulation</h2>
+    </p><h2>Animals of the Extended Perambulation</h2>
     <p>
         Yes, you are right! As part of my post-doctorate work, I did study animals. To answer your question, my favourite creatures are as follows, with definitions:
 
@@ -64,18 +63,13 @@
             <dd>An elk is a horned ungulate found primarily in the mountainous regions of British Columbia. It can be seen from railways, and also frequently visits the Banff centre for the arts.</dd>
             <dt>The red-tailed hawk</dt>
             <dd>An interesting example of historic misinformation: many people believe eagles make the screaming noise associated with them on film. This cry is instead the call of the red-tail.</dd>
-          </dl>
+        </dl>
         For more of my research, see my research page (<a href="http://umd.edu">http://umd.edu</a>).<br>
-    </p>
-    <p>
         Yours sincerely,<br>
-
-        <strong><abbr title="Doctor">Dr</abbr> </strong>Terra Nova<br>
-
-        UMD motto:<br>
-
-        "Fear the Turtle"<br>
-        -- How did this happen, anyway.<br>
+        <strong><abbr title="Doctor">Dr</abbr> </strong>Terra Nova<br>  
+        UMD motto:
+        <blockquote>"Fear the Turtle"</blockquote>
+        -- How did this happen, anyway.
     </p>
   </body>
 </html>
