--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -46,7 +46,7 @@
     </div>
     </div>
     <footer>
-      <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
+      <p>This fake website example is written by Alexander Chui, 2020.</p>
 
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
     </footer>
