--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -32,22 +32,21 @@
       <div class = "article">
         <h2>Welcome</h2>
       
-        <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dolor nulla. Aliquam in congue neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin at ex et nibh semper suscipit. Nam leo felis, rhoncus sed nibh non, tincidunt semper eros. Pellentesque semper venenatis pulvinar. Nullam auctor, tortor in dictum tristique, nulla orci euismod ex, quis ultricies turpis sem vitae dolor. Phasellus accumsan egestas felis. Sed semper congue mi consectetur pretium. Curabitur elementum ligula nisi, non facilisis dui varius semper. Nullam sed molestie lacus, non interdum urna.</p>
 
-        <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur dolor lectus, pretium non velit eu, posuere porttitor elit. Pellentesque at elit sem. Praesent quis mauris varius, suscipit leo eu, scelerisque augue. Phasellus venenatis sed elit at pharetra. Donec laoreet dolor ut risus suscipit, nec iaculis arcu eleifend. Aliquam eget elit in libero accumsan euismod ac quis ante. Mauris interdum vestibulum justo. Nullam consequat vel ligula sit amet condimentum.</p>
       </div>
       <div class = "aside">
         <h2>Favourite photos</h2>
 
-        <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
-        <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
-        <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
-        <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+        <a href="Haikyuu.jpg"><img src="Haikyuu.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
+        <a href="MyHero.jpg"><img src="MyHero.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
+        <a href="KimetsuYaiba.jpg"><img src="KimetsuYaiba.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
+        <a href="VioletEvergarden.jpg"><img src="VioletEvergarden.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
     </div>
     </div>
     <footer>
-      <p>This fake website example is written by Alexander Chui, 2020.</p>
-
+      <p>This fake website example is written by Alexander Chui</p>
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
     </footer>
   </body>
