--- a/public/lab_5/index.html
+++ b/public/lab_5/index.html
@@ -74,8 +74,8 @@
             title.innerText = "Lab 5 for Alexander Chui";
             h1.innerText = "Lab 5 for Alexander Chui";
             document.body.style.backgroundColor = 'red';
-            let checklistLabel =document.querySelector('checkbox-list-label');
-            checklistLabel.innerText="Fruit";
+            let checklistLabel =document.querySelector('.checkbox-list-label');
+            checklistLabel.innerText="Fruits";
             let checkboxLabel =document.querySelectorAll('.flex-inner li label');
             const fruitArray =["Mango","Pineapple","Durian"];
             checkboxLabel.forEach((label,i) => {
@@ -84,7 +84,7 @@
                 label.innerText = fruitArray[i];
             })
             let content = document.querySelector(".flex-outer");
-            //document.content.style.margin = 0 auto;
+            document.content.style.margin = "0px auto";
         }
         activate.addEventListener('click', testFunction);
 </script>
