--- a/public/lab_6/index.html
+++ b/public/lab_6/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>
+      Alexander Chui's Lab 6
+    </title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -9,6 +12,7 @@
     ></script>
   </head>
   <body>
+    <h1>Alexander Chui's Lab 6</h1>
     <div class="wrapper">
       <div class="container flex-outer">
         <div class="header">
@@ -22,6 +26,8 @@
         </form>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js">
+      
+    </script>
   </body>
 </html>
